<resources>
    <string name="app_name">Kara management</string>

    <string name="text_label_main_fragment">Kara management</string>
    <string name="text_label_task_fragment">Tasks</string>
    <string name="text_label_doing_fragment">Doing</string>
    <string name="text_label_done_fragment">Done</string>
    <string name="text_label_detail_fragment">Detail</string>
    <string name="text_label_insert_fragment">Add Task</string>
    <string name="text_label_update_fragment">Edit Task</string>
    <string name="text_label_aboutme_fragment">About me</string>
    <string name="text_label_setting_fragment">Setting</string>

    <string name="text_menu_main_setting">Setting</string>
    <string name="text_menu_main_about">About Me</string>

    <string name="text_menu_detail_update">Edit</string>
    <string name="text_menu_detail_remove">Remove</string>

    <string-array name="text_tabs">
        <item>Tasks</item>
        <item>Doing</item>
        <item>Done</item>
    </string-array>

    <string name="text_edittext_insert_title">Title Tasks</string>
    <string name="text_edittext_insert_status">Status Tasks</string>
    <string-array name="text_insert_status">
        <item>Tasks</item>
        <item>Doing</item>
        <item>Done</item>
    </string-array>
    <string name="text_edittext_insert_description">Description</string>
    <string name="text_button_insert_task">Insert Task</string>

    <string name="text_edittext_update_title">Title Tasks</string>
    <string name="text_radiobutton_update_task">Task</string>
    <string name="text_radiobutton_update_doing">Doing</string>
    <string name="text_radiobutton_update_done">Done</string>
    <string name="text_edittext_update_description">Description</string>
    <string name="text_button_update_task">Edit Task</string>

    <string name="text_toast_task_loaded">Your task status could not be loaded</string>
    <string name="text_toast_title_empty">Title is empty</string>
    <string name="text_toast_task_not_selected">Task status not selected</string>
    <string name="text_toast_okey">Okey</string>

    <string name="text_textview_name_title">FullName: </string>
    <string name="text_textview_name">Omidreza Bagherian Esfandani</string>
    <string name="text_textview_email_title">Email: </string>
    <string name="text_textview_email" translatable="false">OmidrezaBagheriyan@Yahoo.com</string>

    <string name="text_default_mode">Default</string>
    <string name="text_day_mode">Day</string>
    <string name="text_night_mode">Night</string>
</resources>