<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieTheme"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/day" />

    <TextView
        android:id="@+id/tvThemeDefault"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/text_default_mode"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieTheme" />

    <TextView
        android:id="@+id/tvThemeDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_day_mode"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieTheme" />

    <TextView
        android:id="@+id/tvThemeNight"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/text_night_mode"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieTheme" />

    <SeekBar
        android:id="@+id/sbTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:max="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvThemeDay" />

</androidx.constraintlayout.widget.ConstraintLayout>